// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-gtsrHT ljPrYI"
>
  <span
    className="sc-jSFjdj bsAtwI"
  >
    0
  </span>
  <div
    className="sc-dlnjwi gFWwNh"
  >
    <span
      className="sc-bdnxRM bGNMMU"
      color="#fff"
    />
    <p
      className="sc-eCApnc btUvBL"
      color="#555"
    >
      P2
    </p>
  </div>
</div>
`;

exports[`PlayerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-gtsrHT ljPrYI"
>
  <div
    className="sc-dlnjwi gFWwNh"
  >
    <span
      className="sc-bdnxRM kIMDaa"
      color="#000"
    />
    <p
      className="sc-eCApnc jWhorU"
      color="#fff"
    >
      P1
    </p>
  </div>
  <span
    className="sc-jSFjdj bsAtwI"
  >
    0
  </span>
</div>
`;
